--- a/V1/src/main/resources/com/example/v1/AI-Assisted.fxml
+++ b/V1/src/main/resources/com/example/v1/AI-Assisted.fxml
@@ -4,13 +4,17 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="491.0" prefWidth="600.0" spacing="50.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.v1.AI_AssistedController">
    <children>
-      <Label fx:id="ai_respons" prefHeight="18.0" prefWidth="565.0" text="Label" />
+      <Label fx:id="ai_respons" prefHeight="18.0" prefWidth="565.0" textFill="WHITE">
+         <font>
+            <Font size="17.0" />
+         </font></Label>
       <Label fx:id="recommend_technician" text="Label" />
-      <TextField fx:id="proplem_description" />
-      <Button mnemonicParsing="false" text="Button" />
+      <TextField fx:id="proplem_description" promptText="problem Description" />
+      <Button mnemonicParsing="false" onAction="#Get_Recommendation" text="Get Recommendation" />
       <Button mnemonicParsing="false" onAction="#go_to_Service_Request" text="Go Back" />
    </children>
 </VBox>
